tests/idris2/basic/basic001/expected
Cons (S Z) (Cons (S (S Z)) []) : Vect (S (S Z)) Nat
Error: When unifying:
    Vect (S (S Z)) Nat
and:
    Vect (S Z) Nat
Mismatch between: S Z and Z.

(Interactive):1:28--1:51
 1 | zipWith plus (Cons Z Nil) (Cons (S Z) (Cons Z Nil))
                                ^^^^^^^^^^^^^^^^^^^^^^^

